# auvsime2

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/auv_description/lib/auv_description/: wasd_teleop.py
install/auv_description/share/ament_index/resource_index/package_run_dependencies/: auv_description
install/auv_description/share/ament_index/resource_index/parent_prefix_path/: auv_description
install/auv_description/share/auv_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/auv_description/share/auv_description/cmake/: ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  auv_descriptionConfig-version.cmake  auv_descriptionConfig.cmake  simple_buoyancyTargetsExport-noconfig.cmake  simple_buoyancyTargetsExport.cmake  wasd_body_thrust_pluginTargetsExport-noconfig.cmake
install/auv_description/share/auv_description/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/auv_description/share/auv_description/launch/: auv_camera_thrust_test_water.launch.py  cube_thrust_test.launch.py  cube_thrust_test_water.launch.py  cube_thrust_test_water_camera.launch.py  testing.launch.py  view_lidar.lauch.py  view_lidar.launch.py
install/auv_description/share/auv_description/urdf/cube/: auv.urdf  auv.urdf.xacro  camera_module.xacro  cube.urdf  cube_link.xacro  lidar3d_module.xacro  lidar_module.xacro  plugins.xacro
install/auv_description/share/auv_description/urdf/guppy/: guppytest1.urdf.bak  plugins.xacro
install/auv_description/share/auv_description/worlds/: test_world.sdf  testworld.sdf  water_world.sdf
install/auve1_description/share/ament_index/resource_index/package_run_dependencies/: auve1_description
install/auve1_description/share/ament_index/resource_index/parent_prefix_path/: auve1_description
install/auve1_description/share/auve1_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/auve1_description/share/auve1_description/cmake/: ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  auve1_descriptionConfig-version.cmake  auve1_descriptionConfig.cmake  wasd_body_thrust_pluginTargetsExport-noconfig.cmake  wasd_body_thrust_pluginTargetsExport.cmake
install/auve1_description/share/auve1_description/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/auve1_description/share/auve1_description/launch/: cube_thrust_test.launch.py
log/: latest_build
src/auv_description/: CMakeLists.txt
src/auv_description/launch/: cube_thrust_test_water_camera.launch.py  guppy_display.launch.py  testing.launch.py
src/auv_description/rviz/: view_lidar.rviz
src/auv_description/scripts/: wasd_teleop.py
src/auv_description/src/: simple_buoyancy.cc  wasd_body_thrust_plugin.cpp
src/auv_description/urdf/cube/: auv.urdf  camera_module.xacro  cube.urdf  lidar3d_module.xacro
src/auv_description/worlds/: test_world.sdf  water_world.sdf
