<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auv_description</name>
  <version>0.0.0</version>
  <description>
    AUV description package with URDF, meshes, and a Gazebo Harmonic plugin
    to apply body-frame thrust from WASD/EQ teleoperation.
  </description>

  <maintainer email="sangregoriokimpo@todo.todo">sangregoriokimpo</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS dependencies -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>

  <!-- Gazebo (gz-sim) dependencies -->
  <depend>gz-sim8</depend>
  <depend>gz-plugin2</depend>
  <depend>gz-math7</depend>

  <!-- Runtime dependencies for viewing URDFs -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- Export plugin so Gazebo Sim can find it -->
    <gz.plugin>wasd_body_thrust_plugin</gz.plugin>
  </export>
</package>